--- a/docs/vite/code/vite-react/src/components/header/index.module.scss
+++ b/docs/vite/code/vite-react/src/components/header/index.module.scss
@@ -1,5 +1,6 @@
 .header {
-  color: blue;
   font-size: 30px;
+  color: blue;
   text-decoration: dashed;
+  background: url('@/assets/images/2.png') no-repeat;
 }
